fixed overflow in activity chart, switched to active tasks as primary, changed space in bar chart

--- a/src/components/Charts/BarChart.module.scss
+++ b/src/components/Charts/BarChart.module.scss
@@ -64,7 +64,7 @@
     position: absolute;
     bottom: var(--label-position);
     color: var(--color-text-secondary);
-    left: -3.5rem;
+    left: -4rem;
     margin-bottom: -1rem;
     font-size: 1rem;
   }
