--- a/src/components/Tasks/Task.module.scss
+++ b/src/components/Tasks/Task.module.scss
@@ -104,6 +104,7 @@
   &--done {
     .task__title {
       text-decoration-line: line-through;
+      text-decoration-color: var(--color-grey-4);
     }
     .task__checkbtn {
       border-color: #397054;
