--- a/src/components/Tasks/Tasks.module.scss
+++ b/src/components/Tasks/Tasks.module.scss
@@ -37,14 +37,17 @@
 
     &--delete {
       position: absolute;
-      right: 14.5rem;
+      right: 18rem;
       top: 2rem;
       font-family: inherit;
       padding: 0.81rem 2.2rem;
 
       @include respond(phone) {
-        right: 11.5rem;
+        right: 16rem;
         padding: 0.55rem 1.2rem;
+      }
+      @include respond(phone-v-small) {
+        display: none;
       }
     }
   }
